api для wards
